BUGFIX: Prevent doubled scrollbars

--- a/Resources/Private/FlatNav/src/style.modules.css
+++ b/Resources/Private/FlatNav/src/style.modules.css
@@ -4,7 +4,7 @@
 }
 
 .tabsContent {
-    height: calc(100% - 41px);
+    height: calc(100% - 42px);
 }
 
 .tabsPanel {
@@ -57,6 +57,7 @@
 .treeWrapper {
     flex-grow: 1;
     padding: 5px 0;
+    overflow-y: scroll;
 }
 
 .pageTreeToolbarOriginal :is(div) {
